--- a/index.html
+++ b/index.html
@@ -1,168 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio van MBacioglu</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  </head>
 
-  <body>
-    <header>
-      <div class="p-3 mb-2 bg-primary text-white">
-        <h1>Portfolio van MBacioglu</h1>
-        <div class="social-icons">
-          <a href="https://www.tiktok.com/@mrc31._?_t=8n6X4fyYJRw&_r=1"><i class="bi bi-tiktok text-light"></i></a>
-          <a href="https://www.linkedin.com/in/mirac-bacioglu-971b362bb/?trk=public-profile-join-page"><i class="bi bi-linkedin text-light"></i></a>
-          <a href="https://github.com/MBacioglu"><i class="bi bi-github text-light"></i></a>
-          <a href="https://www.instagram.com/mrc31._?igsh=MWw4dXRqdGhyNndkYg%3D%3D&utm_source=qr"><i class="bi bi-instagram text-light"></i></a>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio van MBacioglu</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+</head>
+
+<body>
+  <header>
+    <div class="p-3 mb-2 bg-primary text-white">
+      <h1>Portfolio van MBacioglu</h1>
+      <div class="social-icons">
+        <a href="https://www.tiktok.com/@mrc31._?_t=8n6X4fyYJRw&_r=1"><i class="bi bi-tiktok text-light"></i></a>
+        <a href="https://www.linkedin.com/in/mirac-bacioglu-971b362bb/?trk=public-profile-join-page"><i
+            class="bi bi-linkedin text-light"></i></a>
+        <a href="https://github.com/MBacioglu"><i class="bi bi-github text-light"></i></a>
+        <a href="https://www.instagram.com/mrc31._?igsh=MWw4dXRqdGhyNndkYg%3D%3D&utm_source=qr"><i
+            class="bi bi-instagram text-light"></i></a>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <main>
-      <div class="container-fluid" style="height: 100vh">
-        <div class="row" style="height: 100%">
-          <div class="col-md-2 themed-grid-col">
-            <div
-              class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary"
-              style="height: 100%"
-            >
-              <a
-                href="/"
-                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-              >
-                <svg class="bi pe-none me-2" width="40" height="32">
-                  <use xlink:href="#bootstrap"></use>
-                </svg>
-                <span class="fs-4">Mirac Bacioglu</span>
-              </a>
-              <hr />
-              <ul class="nav nav-pills flex-column mb-auto">
-                <li class="nav-item">
-                  <a
-                    href="/index.html"
-                    class="nav-link active"
-                    aria-current="page"
-                  >
-                    <svg class="bi pe-none me-2" width="16" height="16">
-                      <use xlink:href="#home"></use>
-                    </svg>
-                    Home
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="/projects.html" class="nav-link link-body-emphasis">
-                    <svg class="bi pe-none me-2" width="16" height="16">
-                      <use xlink:href="#table"></use>
-                    </svg>
-                    Projects
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="/contact.html" class="nav-link link-body-emphasis">
-                    <svg class="bi pe-none me-2" width="16" height="16">
-                      <use xlink:href="#people-circle"></use>
-                    </svg>
-                    Contact
-                  </a>
-                </li>
-              </ul>
-              <hr />
-              <div class="dropdown">
-                <img
-                  src="/img/4920418bda4e8898a226c2e6fd772d39.jpg"
-                  alt=""
-                  width="32"
-                  height="32"
-                  class="rounded-circle me-2"
-                />
-                <strong>MBacioglu</strong>
-              </div>
+  <main>
+    <div class="container-fluid" style="height: 100vh">
+      <div class="row" style="height: 100%">
+        <div class="col-md-2 themed-grid-col">
+          <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="height: 100%">
+            <a href="/"
+              class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+              <svg class="bi pe-none me-2" width="40" height="32">
+                <use xlink:href="#bootstrap"></use>
+              </svg>
+              <span class="fs-4">Mirac Bacioglu</span>
+            </a>
+            <hr />
+            <ul class="nav nav-pills flex-column mb-auto">
+              <li class="nav-item">
+                <a href="/index.html" class="nav-link active" aria-current="page">
+                  <svg class="bi pe-none me-2" width="16" height="16">
+                    <use xlink:href="#home"></use>
+                  </svg>
+                  Home
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="/projects.html" class="nav-link link-body-emphasis">
+                  <svg class="bi pe-none me-2" width="16" height="16">
+                    <use xlink:href="#table"></use>
+                  </svg>
+                  Projects
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="/contact.html" class="nav-link link-body-emphasis">
+                  <svg class="bi pe-none me-2" width="16" height="16">
+                    <use xlink:href="#people-circle"></use>
+                  </svg>
+                  Contact
+                </a>
+              </li>
+            </ul>
+            <hr />
+            <div class="dropdown">
+              <img src="/img/4920418bda4e8898a226c2e6fd772d39.jpg" alt="" width="32" height="32"
+                class="rounded-circle me-2" />
+              <strong>MBacioglu</strong>
             </div>
           </div>
-          <div class="col-md-10">
+        </div>
+        <div class="col-md-10">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <h1>Welkom op mijn portofolio page</h1>
+              </div>
+              <div class="col-md-6">
+                <h2>Over Mij</h2>
+                <p class="lead">
+                  Ik ben Mirac, een gepassioneerde Software Developer met een
+                  sterke achtergrond in HTML, Javascript, CSS en Bootstrap.
+                  Mijn doel is om een succesvol te worden. Met een focus op
+                  samenwerking, individuele werk en hardwerken, werk ik aan
+                  verschillende doelen en projecten om nog beter te worden.
+                </p>
+              </div>
+            </div>
+
             <div class="container">
               <div class="row">
+                <div class="col-md-3"></div>
                 <div class="col-md-6">
-                  <h1>Welkom op mijn portofolio page</h1>
+                  <div class="html-skill">
+                    HTML
+                    <div class="bar bg-secondary w-100">
+                      <div class="html-progress bg-primary h-100"></div>
+                    </div>
+                  </div>
                 </div>
+                <div class="col-md-3"></div>
+              </div>
+            </div>
+            <div class="container">
+              <div class="row">
+                <div class="col-md-3"></div>
                 <div class="col-md-6">
-                  <h2>Over Mij</h2>
-                  <p class="lead">
-                    Ik ben Mirac, een gepassioneerde Software Developer met een
-                    sterke achtergrond in HTML, Javascript, CSS en Bootstrap.
-                    Mijn doel is om een succesvol te worden. Met een focus op
-                    samenwerking, individuele werk en hardwerken, werk ik aan
-                    verschillende doelen en projecten om nog beter te worden.
-                  </p>
-                </div>
-              </div>
-
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-3"></div>
-                  <div class="col-md-6">
-                    <div class="html-skill">
-                      HTML
-                      <div class="bar bg-secondary w-100">
-                        <div class="html-progress bg-primary h-100"></div>
-                      </div>
+                  <div class="html-skill">
+                    Javascript
+                    <div class="bar bg-secondary w-100">
+                      <div class="javascript-progress bg-primary h-100"></div>
                     </div>
                   </div>
-                  <div class="col-md-3"></div>
                 </div>
+                <div class="col-md-3"></div>
               </div>
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-3"></div>
-                  <div class="col-md-6">
-                    <div class="html-skill">
-                      Javascript
-                      <div class="bar bg-secondary w-100">
-                        <div class="javascript-progress bg-primary h-100"></div>
-                      </div>
+            </div>
+            <div class="container">
+              <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                  <div class="html-skill">
+                    Bootstrap
+                    <div class="bar bg-secondary w-100">
+                      <div class="bootstrap-progress bg-primary h-100"></div>
                     </div>
                   </div>
-                  <div class="col-md-3"></div>
                 </div>
+                <div class="col-md-3"></div>
               </div>
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-3"></div>
-                  <div class="col-md-6">
-                    <div class="html-skill">
-                      Bootstrap
-                      <div class="bar bg-secondary w-100">
-                        <div class="bootstrap-progress bg-primary h-100"></div>
-                      </div>
+            </div>
+            <div class="container">
+              <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                  <div class="html-skill">
+                    NodeJS
+                    <div class="bar bg-secondary w-100">
+                      <div class="nodejs-progress bg-primary h-100"></div>
                     </div>
                   </div>
-                  <div class="col-md-3"></div>
                 </div>
+                <div class="col-md-3"></div>
               </div>
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-3"></div>
-                  <div class="col-md-6">
-                    <div class="html-skill">
-                      NodeJS
-                      <div class="bar bg-secondary w-100">
-                        <div class="nodejs-progress bg-primary h-100"></div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3"></div>
-                </div>
-              </div>
+            </div>
             <div class="container">
               <div class="row">
                 <div class="col-md-3"></div>
@@ -208,15 +193,15 @@
           </div>
         </div>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <footer></footer>
+  <footer></footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/main.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
